--- a/index.ipynb
+++ b/index.ipynb
@@ -91,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
     "    next_up = travel_destinations[0]\n",
-    "    return next_"
+    "    return next_up"
    ]
   },
   {
