Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,13 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    "
+    "    \n",
+    "    \n",
+    "    fruits=['orange', 'grape', 'kiwi', 'apple', 'mango', 'fig', 'lemon']\n",
+    "newList = []\n",
+    "for fruit in fruits:\n",
+    "    newList.append(fruit.upper())\n",
+    "print(newlist)"
    ]
   },
   {
