--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countries = \n",
+    "    capitalize_countries = travel_\n",
     "    \n",
     "    fruits=['orange', 'grape', 'kiwi', 'apple', 'mango', 'fig', 'lemon']\n",
     "newList = []\n",
