--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = capitalize_countries.append(upper())\n",
-    "    return\n",
+    "    return capitalize_countries\n",
     "    \n",
     "    fruits=['orange', 'grape', 'kiwi', 'apple', 'mango', 'fig', 'lemon']\n",
     "newList = []\n",
