Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalize_countries = capitalize_countries.append(travel_destinationsupper())\n",
+    "    capitalize_countries = capitalize_countries.append(travel_destinations.upper())\n",
     "    return capitalize_countries\n",
     "    \n",
     "    fruits=['orange', 'grape', 'kiwi', 'apple', 'mango', 'fig', 'lemon']\n",
