--- a/index.ipynb
+++ b/index.ipynb
@@ -225,6 +225,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
+    "    capitalize_countries []\n",
     "    capitalize_countries.append(travel_destinations.upper())\n",
     "    return capitalize_countries"
    ]
