--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    travel_destinations []\n",
+    "    travel_destinations = []\n",
     "    \n",
     "    capitalize_countries.append(travel_destinations.upper())\n",
     "    return capitalize_countries"
