Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    travel_destinations = []\n",
-    "    capitalize_countries.append(travel_destinations.upper())\n",
+    "    for capitalize_countries.append(travel_destinations.upper())\n",
     "    return capitalize_countries"
    ]
   },
