--- a/index.ipynb
+++ b/index.ipynb
@@ -207,7 +207,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "favorite_destination()\n",
-    "travel_destinations.append('japan')\n",
+    "travel_destinations.append('madagascar')\n",
     "travel_destinations[-1] # 'madagascar'"
    ]
   },
