--- a/index.ipynb
+++ b/index.ipynb
@@ -96,8 +96,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    travel_destinations[0]\n",
-    "    return next_up"
+    "    return travel_destinations[0]"
    ]
   },
   {
