--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    favorite_destination = 'madagascar'\n",
+    "    travel_destinations.append('madagascar')\n",
     "    return favorite_destination"
    ]
   },
