--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    travel_destinations = []\n",
+    "    capitalize_countries = []\n",
     "    for capitalize_countries.append(travel_destinations.upper())\n",
     "    return capitalize_countries"
    ]
