--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
-    "    for destination in travel_destinations.append(travel_destinations.upper())\n",
+    "    for destination in travel_destinations.append(destination.upper())\n",
     "    return capitalize_countries"
    ]
   },
