--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,8 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
-    "    for destination in travel_destinations.append(destination.title())\n",
+    "    for destination in travel_destinations:\n",
+    "        .append(destination.title())\n",
     "    return capitalize_countries"
    ]
   },
