--- a/index.ipynb
+++ b/index.ipynb
@@ -235,8 +235,8 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        .append(destination.title())\n",
-    "    return capitalize_countries"
+    "        capitalized_countries.append(destination.title())\n",
+    "    return capitalized_countries"
    ]
   },
   {
