Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -218,12 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def capitalize_countries():\n",
+    "def capitalized_countries():\n",
     "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalized_countries.append(destination.title())\n",
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalized_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
