--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +226,13 @@
     "def capitalize_countries():\n",
     "    capitalize_countries = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.title())\n",
-    "    return capitalized_countries"
+    "        capitalize_countries.append(destination.title())\n",
+    "    return capitalize_countries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
        "['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
